@@ -1139,3 +1139,4 @@ Added the license-info API command for getting the serial number and domain coun
 ---- Changes since 3.71 ----
 Added support for JSON, XML and Perl output to the remote API, enabled with the json=1, xml=1 or perl=1 URL parameters.
 Deprecated the feature to write logs via a program, as logging to /var/log/virtualmin is now the default.
+Added validation for incorrect SuExec Apache directives.
